syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lms.grpc";
package user;

service UserService {
  rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse);
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string photoUrl = 6;
}